--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,2 +1,2 @@
-• Fans of big emotions (or emoji) will be happy to hear that a small space or line break between two emoji characters will no longer prevent those emoji from appearing in their jumbo form.
-• We also fixed a bug that sometimes caused the tab bar to cover the text input field, and another one that caused edited attachments to appear in the media gallery multiple times — so now you can change the past without feeling like you're repeating it.
+• Großartige Nachrichten für Fans großer Emotionen (oder Emojis) – sollte sich ein kleines Leerzeichen oder ein Zeilenumbruch zwischen zwei Emojis schleichen, werden diese Emojis jetzt trotzdem in voller Größe angezeigt.
+• Wir haben auch einen Fehler behoben, der ab und zu dazu führte, dass die Tab-Leiste das Texteingabefeld verdeckte. Und noch einen weiteren Fehler bereinigt, der dazu führte, dass bearbeitete Anhänge in der Mediengalerie mehrmals angezeigt wurden. Jetzt kannst du die Vergangenheit ändern, ohne das Gefühl zu haben, sie zu wiederholen.
