--- a/fastlane/metadata/hu/release_notes.txt
+++ b/fastlane/metadata/hu/release_notes.txt
@@ -1,2 +1,2 @@
-• Fans of big emotions (or emoji) will be happy to hear that a small space or line break between two emoji characters will no longer prevent those emoji from appearing in their jumbo form.
-• We also fixed a bug that sometimes caused the tab bar to cover the text input field, and another one that caused edited attachments to appear in the media gallery multiple times — so now you can change the past without feeling like you're repeating it.
+• Hangulatjel-megjelenítéssekkel kapcsolatos fejlesztések.
+• Kijavítottunk egy olyan hibát is, amely miatt a tabulátor sáv eltakarta a szövegbeviteli mezőt, és egy másikat, amely miatt a szerkesztett mellékletek többször is megjelentek a médiagalériában – így most megváltoztathatod a múltat anélkül, hogy azt éreznéd, hogy megismételnéd.
