--- a/fastlane/metadata/zh-Hant/release_notes.txt
+++ b/fastlane/metadata/zh-Hant/release_notes.txt
@@ -1,2 +1,2 @@
-• Fans of big emotions (or emoji) will be happy to hear that a small space or line break between two emoji characters will no longer prevent those emoji from appearing in their jumbo form.
-• We also fixed a bug that sometimes caused the tab bar to cover the text input field, and another one that caused edited attachments to appear in the media gallery multiple times — so now you can change the past without feeling like you're repeating it.
+• 喜歡大表情符號 (emoji) 的粉絲一定會很高興聽到，兩個 emoji 字元之間的小空格或換行，將不再會阻止這些 emoji 以巨型的形式出現。
+• 我們也修正了一個有時會造成標籤列遮住文字輸入欄位的錯誤，以及另一個會造成已編輯附件多次出現在媒體圖片庫的錯誤。
