--- a/fastlane/metadata/da/release_notes.txt
+++ b/fastlane/metadata/da/release_notes.txt
@@ -1,2 +1,2 @@
-• Fans of big emotions (or emoji) will be happy to hear that a small space or line break between two emoji characters will no longer prevent those emoji from appearing in their jumbo form.
-• We also fixed a bug that sometimes caused the tab bar to cover the text input field, and another one that caused edited attachments to appear in the media gallery multiple times — so now you can change the past without feeling like you're repeating it.
+• Fans af store følelser (eller emojis) vil blive glade for at høre, at et lille mellemrum eller linjeskift mellem to emojikarakterer ikke længere forhindrer disse emoji i at blive vist i deres jumboform.
+• Vi har også rettet en fejl, der nogle gange fik fanelinjen til at dække tekstinputfeltet, og en anden, der fik redigerede vedhæftede filer til at blive vist i mediegalleriet flere gange – så nu kan du ændre fortiden uden at føle, at du gentager den.
