--- a/fastlane/metadata/pt-BR/release_notes.txt
+++ b/fastlane/metadata/pt-BR/release_notes.txt
@@ -1,2 +1,2 @@
-• Fans of big emotions (or emoji) will be happy to hear that a small space or line break between two emoji characters will no longer prevent those emoji from appearing in their jumbo form.
-• We also fixed a bug that sometimes caused the tab bar to cover the text input field, and another one that caused edited attachments to appear in the media gallery multiple times — so now you can change the past without feeling like you're repeating it.
+• Os fãs de emojis grandes vão gostar de saber que um pequeno espaço ou quebra de linha entre dois emojis não impedirá mais que eles sejam exibidos no formato jumbo.
+• Também corrigimos um erro que, às vezes, fazia a barra de abas cobrir o campo de texto e outro que duplicava anexos editados na galeria de mídia.
